# FASTAPIZERO

./: pyproject.toml
migrations/: env.py
migrations/versions/: 038d621760aa_adding__created.py  1758713f3ebf_create_todos_table.py  7fd6766d54f2_create_users_table.py  fbbf9afd98fe_adding__created.py
playground/: test.http
src/: app.py  models.py  schemas.py  security.py
src/routers/: auth.py  todos.py  users.py
tests/: conftest.py  factories.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
